feat: add register user endpoint
